--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,10 @@ html,body,#root{
 .side-nav-link:hover svg{
   stroke: white;
 }
+.theme{
+  color: white;
+  background-color: #3E4049;
+}
 .active{
   color: white;
   background-color: #3E4049;
@@ -84,7 +88,8 @@ html,body,#root{
 }
 .devider-vertical{
   border: 1px solid grey;
-  margin-left: 10px;
+  margin-left: 30px;
+  margin-right: 10px;
   height: 30px;
   width: 1px;
   /* margin-right: px; */
@@ -104,7 +109,7 @@ html,body,#root{
 }
 .top-nav-right{
   display: flex;
-  width: 200px;
+  width: 230px;
   align-items: center;
   justify-content: space-between;
 }
@@ -169,6 +174,9 @@ html,body,#root{
   color: white;
   border: none;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -369,5 +377,8 @@ html,body,#root{
   }
   .tickets .content{
     overflow-y: scroll;
-}
+  }
+  .route-nav{
+    display: none;
+  }
 }
